--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ body {
     )
     rgb(var(--background-start-rgb));
   text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  font-family: system-ui, -app le-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
@@ -35,4 +35,13 @@ form {
 form input,
 form button {
   border-radius: 5px;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
 }
